// Vitest Snapshot v1

exports[`plugins/babel > should set babel-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "/builder/web-builder",
              {
                "not": /node_modules/,
              },
            ],
          },
          "/builder/web-builder/src/runtime/core-js-entry.js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "/builder/web-builder/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "/@babel/plugin-transform-destructuring/lib/index.js",
                  {
                    "loose": false,
                    "selectiveLoose": [
                      "useState",
                      "useEffect",
                      "useContext",
                      "useReducer",
                      "useCallback",
                      "useMemo",
                      "useRef",
                      "useImperativeHandle",
                      "useLayoutEffect",
                      "useDebugValue",
                    ],
                  },
                ],
                [
                  "/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-function-bind/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": {
                      "node": "12",
                    },
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/babel > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              "/builder/web-builder",
              {
                "not": /node_modules/,
              },
            ],
          },
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "/builder/web-builder/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "/@babel/plugin-transform-destructuring/lib/index.js",
                  {
                    "loose": false,
                    "selectiveLoose": [
                      "useState",
                      "useEffect",
                      "useContext",
                      "useReducer",
                      "useCallback",
                      "useMemo",
                      "useRef",
                      "useImperativeHandle",
                      "useLayoutEffect",
                      "useDebugValue",
                    ],
                  },
                ],
                [
                  "/cli/babel-preset-app/src/built-in/babel-plugin-lock-corejs-version",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "/cli/babel-preset-app/src/built-in/babel-plugin-ssr-loader-id",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-function-bind/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": undefined,
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": {
                      "node": "12",
                    },
                    "useBuiltIns": undefined,
                  },
                ],
                [
                  "/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;
